fix: fullscreen のとき、fullscreenボタンが表示されてしまうことがあった

--- a/libPlayer/src/main/res/layout/v2_player_view.xml
+++ b/libPlayer/src/main/res/layout/v2_player_view.xml
@@ -8,7 +8,7 @@
     <io.github.toyota32k.lib.player.view.ExoPlayerHost
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="top|center_horizontal"
+        android:layout_gravity="center"
         android:id="@+id/player"
         app:ampAttrsByParent="true"
         />
