feat: Volume controller

--- a/libPlayer/src/main/res/drawable/ic_volume_muted.xml
+++ b/libPlayer/src/main/res/drawable/ic_volume_muted.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</selector>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:height="24dp"
+    android:width="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+    <path android:fillColor="#000" android:pathData="M 12 4L 9.91 6.09 12 8.18M 4.27 3L 3 4.27 7.73 9H 3V 15H 7L 12 20V 13.27L 16.25 17.53C 15.58 18.04 14.83 18.46 14 18.7V 20.77C 15.38 20.45 16.63 19.82 17.68 18.96L 19.73 21 21 19.73 12 10.73M 19 12C 19 12.94 18.8 13.82 18.46 14.64L 19.97 16.15C 20.62 14.91 21 13.5 21 12 21 7.72 18 4.14 14 3.23V 5.29C 16.89 6.15 19 8.83 19 12M 16.5 12C 16.5 10.23 15.5 8.71 14 7.97V 10.18L 16.45 12.63C 16.5 12.43 16.5 12.21 16.5 12Z" />
+</vector>
