--- a/libPlayer/src/main/res/drawable/ic_volume.xml
+++ b/libPlayer/src/main/res/drawable/ic_volume.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</selector>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:height="24dp"
+    android:width="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+    <path android:fillColor="#000" android:pathData="M 14 3.23V 5.29C 16.89 6.15 19 8.83 19 12 19 15.17 16.89 17.84 14 18.7V 20.77C 18 19.86 21 16.28 21 12 21 7.72 18 4.14 14 3.23M 16.5 12C 16.5 10.23 15.5 8.71 14 7.97V 16C 15.5 15.29 16.5 13.76 16.5 12M 3 9V 15H 7L 12 20V 4L 7 9H 3Z" />
+</vector>
