--- a/libPlayer/src/main/res/layout/v2_player_view.xml
+++ b/libPlayer/src/main/res/layout/v2_player_view.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center">
@@ -16,7 +17,32 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/controller"
-        android:layout_gravity="bottom"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:ampAttrsByParent="true"
         />
-</FrameLayout>
+
+    <View
+        android:id="@+id/volume_guard_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:clickable="true"
+        android:visibility="gone"
+        tools:visibility="visible"
+        />
+
+    <io.github.toyota32k.lib.player.view.VolumePanel
+        android:id="@+id/volume_panel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/controller"
+        android:paddingHorizontal="50dp"
+        android:layout_marginBottom="20dp"
+        app:ampAttrsByParent="true"
+        android:visibility="gone"
+        tools:visibility="visible"
+        />
+</androidx.constraintlayout.widget.ConstraintLayout>
