--- a/libPlayer/src/main/res/layout/v2_volume_panel.xml
+++ b/libPlayer/src/main/res/layout/v2_volume_panel.xml
@@ -1,6 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/volume_muted_button"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        style="@style/Widget.Material3.Button.IconButton.Filled"
+        app:icon="@drawable/ic_volume_muted"
+        />
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/volume_button"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        style="@style/Widget.Material3.Button.IconButton.Filled"
+        app:icon="@drawable/ic_volume"
+        />
+    <com.google.android.material.slider.Slider
+        android:id="@+id/volumeSlider"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:valueFrom="0"
+        android:valueTo="100"
+        android:value="100"
+        android:stepSize="1"
+        />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
