fix: adjust position of photo viewer

--- a/libPlayer/src/main/res/layout/v2_video_exo_player.xml
+++ b/libPlayer/src/main/res/layout/v2_video_exo_player.xml
@@ -39,8 +39,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="invisible"
-        android:background="@color/white"
-        android:alpha="0.4"
+        android:background="@color/transparent"
         >
         <ProgressBar
             tools:visibility="visible"
