--- a/libPlayer/src/main/res/layout/v2_video_exo_player.xml
+++ b/libPlayer/src/main/res/layout/v2_video_exo_player.xml
@@ -41,14 +41,35 @@
         android:background="@color/transparent"
         >
         <ProgressBar
-            tools:visibility="visible"
-            style="?android:attr/progressBarStyleLarge"
-            android:id="@+id/exp_progressRing"
+            style="?android:attr/progressBarStyle"
+            android:id="@+id/exp_progressRingMedium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal|center_vertical"
-            android:visibility="invisible"
+            android:visibility="gone"
             android:background="@null"
+            android:layout_margin="10dp"
+            />
+        <ProgressBar
+            style="?android:attr/progressBarStyleLarge"
+            android:id="@+id/exp_progressRingLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:visibility="gone"
+            android:background="@null"
+            android:layout_margin="10dp"
+            />
+        <ProgressBar
+            tools:visibility="visible"
+            style="?android:attr/progressBarStyleSmall"
+            android:id="@+id/exp_progressRingSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|left"
+            android:visibility="gone"
+            android:background="@null"
+            android:layout_margin="8dp"
             />
         <TextView
             tools:text="something wrong"
