--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,47 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".MainActivity"
     >
 
-    <io.github.toyota32k.lib.player.view.PlayerSlider
-        android:id="@+id/player_slider"
+    <io.github.toyota32k.lib.player.view.VideoPlayerView
+        android:id="@+id/video_viewer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/addChapter"
-        android:text="Add Chapter"
-        />
-    <io.github.toyota32k.lib.player.view.SliderPanel
-        android:id="@+id/slider_panel"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
-    <io.github.toyota32k.lib.player.view.ControlPanel
-        android:id="@+id/control_panel"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        >
-        <io.github.toyota32k.lib.player.view.VideoPlayerView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:ampAttrsByParent="true"
-            app:ampPlayerCenteringVertically="true"
-            />
-    </FrameLayout>
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
