--- a/libPlayer/src/main/res/layout/v2_video_exo_player.xml
+++ b/libPlayer/src/main/res/layout/v2_video_exo_player.xml
@@ -18,7 +18,7 @@
             android:layout_height="match_parent"
             android:id="@+id/exp_playerView"
             app:use_controller="false"
-            app:surface_type="texture_view"
+            app:surface_type="surface_view"
             app:resize_mode="fit"
             />
         <ImageView
