--- a/libPlayer/src/main/res/layout/v2_video_exo_player.xml
+++ b/libPlayer/src/main/res/layout/v2_video_exo_player.xml
@@ -18,9 +18,21 @@
             android:layout_height="match_parent"
             android:id="@+id/exp_playerView"
             app:use_controller="false"
-            app:surface_type="surface_view"
+            app:surface_type="texture_view"
             app:resize_mode="fit"
             />
+        
+        <!-- SurfaceView is more efficient than TextureView, but it cannot be rotated. -->
+<!--        <androidx.media3.ui.PlayerView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:id="@+id/exp_playerView_surfaceView"-->
+<!--            app:use_controller="false"-->
+<!--            app:surface_type="surface_view"-->
+<!--            app:resize_mode="fit"-->
+<!--            android:visibility="gone"-->
+<!--            />-->
+
         <ImageView
             android:id="@+id/exp_photoView"
             android:layout_width="match_parent"
